# k9-aif-framework

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SKILLS.md  build.sh  extract_k9_graph.py  generate_pdoc.sh  k9_aif_graph.cypher  k9_generator.sh  k9xos.sh  pyproject.toml  requirements.txt  run_acme_support_center.sh  run_eoc_pod.sh  run_k9chat.sh  setup.md  test_model_router.sh  test_squads.sh
k9_aif_abb/: README.md  __init__.py  cli.py  pyproject.toml  requirements.txt
k9_aif_abb/config/: __init__.py  config.yaml  orchestrators.yaml
k9_aif_abb/db/: k9aif_db_schema.sql
k9_aif_abb/k9_adapters/crewai/: crewai_orchestrator_adapter.py  k9_crewai_adapter.py  k9x_litellm_bridge_adapter.py
k9_aif_abb/k9_adapters/integration/: __init__.py  base_api_adapter.py  base_bpm_adapter.py  (+7 more)
k9_aif_abb/k9_agents/: __init__.py  agent_loader.py
k9_aif_abb/k9_cache/: __init__.py
k9_aif_abb/k9_core/: __init__.py  base_adapter.py  base_component.py  context.py
k9_aif_abb/k9_data/: __init__.py  base_vectordb.py  vectordb_factory.py
k9_aif_abb/k9_factories/: __init__.py  agent_factory.py  cache_factory.py  connector_factory.py  data_transformation_factory.py  embedding_factory.py  evaluation_factory.py  governance_factory.py  llm_factory.py  mcp_client_connection_factory.py  message_factory.py  model_router_factory.py  monitor_factory.py  object_storage_factory.py  orchestration_factory.py  persistence_factory.py  retriever_factory.py  router_factory.py  security_factory.py  session_factory.py  streaming_factory.py  streams_factory.py
k9_aif_abb/k9_governance/: __init__.py  profanity_governance.py
k9_aif_abb/k9_inference/: README.md  __init__.py  test_router.py
k9_aif_abb/k9_mcp/: __init__.py  mcp_inference_server.py
k9_aif_abb/k9_monitoring/: __init__.py  cloudwatch_monitor.py  console_monitor.py  monitor_server.py  otel_monitor.py  prometheus_monitor.py
k9_aif_abb/k9_orchestrators/: __init__.py  diagnostic_orchestrator.py  framework_orchestrator.py  governance_orchestrator.py  intent_orchestrator.py  liveagent_orchestrator.py
k9_aif_abb/k9_persistence/: __init__.py  chromadb_persistence.py  sqlite_persistence.py
k9_aif_abb/k9_security/: __init__.py
k9_aif_abb/k9_sessions/: __init__.py  in_memory_session_store.py  redis_session_store.py  sqlite_session_store.py
k9_aif_abb/k9_squad/: __init__.py  base_squad.py  intent_squad.py  squad_context.py  squad_loader.py  squad_monitor.py
k9_aif_abb/k9_storage/: __init__.py  database_storage.py  file_storage.py  object_storage.py  postgres_database_storage.py  routing_state_store.py
k9_aif_abb/k9_streams/: __init__.py  in_memory_stream.py  kafka_stream.py
k9_aif_abb/k9_utils/: __init__.py  config_loader.py  k9_aif_inspector.py  k9_ascii.py  llm_invoke.py  logging_loader.py  ocr.py  timer.py  xml_json_transformer.py
k9_aif_abb/policies/: __init__.py
k9_aif_abb/tests/: test_agent_loader.py  test_agent_registry.py  test_base_squad.py  test_cache.py  test_embedding_factory.py  test_execute_squads.py  test_framework.py  test_governance_agent.py  test_integration_adapters.py  test_k9_event_bus_security.py  test_k9_planning_loop_agent.py  test_k9_prompt_evaluator.py  test_k9_retriever.py  test_model_router.py  test_ollama_live.py  test_orchestrator_registry.py  test_pii_request_check.py  test_ported_vulnerability_checks.py  test_profanity_governance.py  test_secret_manager.py  test_shield_governance.py  test_squad_loader.py  test_vulnerability_chain.py  test_zero_trust.py
(+949 files in other folders)
