[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k9-aif"
version = "1.2.1"
description = "K9-AIF: Architecture-First Framework for Governed, Modular Agentic AI Systems"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Ravi Natarajan", email = "ravi.natarajan@ibm.com" }
]
keywords = ["agentic-ai", "multi-agent", "governance", "llm", "enterprise-ai"]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.28",
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
kafka     = ["aiokafka>=0.10"]
postgres  = ["psycopg2-binary>=2.9"]
neo4j     = ["neo4j>=5.14"]
crewai    = ["crewai>=1.14"]
chromadb  = ["chromadb>=1.0"]
server    = ["fastapi>=0.110", "uvicorn>=0.29"]
all       = [
    "aiokafka>=0.10",
    "psycopg2-binary>=2.9",
    "neo4j>=5.14",
    "crewai>=1.14",
    "chromadb>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.urls]
Homepage   = "https://github.com/k9aif/k9-aif-framework"
Changelog  = "https://github.com/k9aif/k9-aif-framework/blob/main/CHANGELOG.md"
Issues     = "https://github.com/k9aif/k9-aif-framework/issues"

[project.scripts]
k9aif = "k9_aif_abb.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["k9_aif_abb*"]

[tool.setuptools.package-data]
"k9_aif_abb" = ["**/*.yaml", "**/*.json", "**/*.sql"]
